--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,6 +1,20 @@
 <resources>
-    <string name="app_name">HashtagViewSample</string>
+    <string name="app_name">HashtagView demo</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="title_intro">Simple way to represent\nyour collections data</string>
+    <string name="title_events">Handle specific events</string>
+    <string name="title_gravity">Play with the gravity as you want</string>
+    <string name="title_spacing">Control spacing</string>
+    <string name="title_styling">Express your style</string>
+    <string name="title_contact">Sources and feedback</string>
+
+    <string name="contact">Contact greenfrvr.dev@gmail.com for any ideas or suggestions</string>
+    <string name="sources">All sources available on GitHub</string>
+    <string name="check_updates">And don\'t forget to check project for updates</string>
+
+    <string name="github">https://github.com/greenfrvr/hashtag-view</string>
+    <string name="email">greenfrvr.dev@gmail.com</string>
+
+    <string name="previous">PREV</string>
+    <string name="next">NEXT</string>
 </resources>
