--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,22 +1,34 @@
 <resources>
-    <string name="app_name">HashtagView demo</string>
+    <string name="app_name">HashtagView</string>
+    <string name="toolbar_title">HashtagView</string>
 
-    <string name="action_settings">Settings</string>
-
-    <string name="title_intro">Simple way to represent\nyour collections data</string>
+    <string name="title_intro">Simple way to represent your collections data</string>
     <string name="title_events">Handle specific events</string>
     <string name="title_gravity">Play with the gravity as you want</string>
     <string name="title_spacing">Control spacing</string>
     <string name="title_styling">Express your style</string>
     <string name="title_contact">Sources and feedback</string>
 
+    <string name="section_gravity_left">Left</string>
+    <string name="section_gravity_center">Center</string>
+    <string name="section_gravity_right">Right</string>
+    <string name="section_spacing_paddings">Paddings</string>
+    <string name="section_spacing_margins">Margins</string>
+    <string name="section_spacing_stretch">Stretch mode</string>
+    <string name="section_events_click">Click events</string>
+    <string name="section_events_select">Selection mode</string>
+    <string name="section_style_colors">Colors &amp; Typefaces</string>
+    <string name="section_style_spans">Spannables &amp; Backgrounds</string>
+    <string name="section_style_drawables">Drawables</string>
+
     <string name="contact">Contact greenfrvr.dev@gmail.com for any ideas or suggestions</string>
     <string name="sources">All sources available on GitHub</string>
     <string name="check_updates">And don\'t forget to check project for updates</string>
 
+    <string name="back">BACK</string>
+    <string name="next">NEXT</string>
+
     <string name="github">https://github.com/greenfrvr/hashtag-view</string>
     <string name="email">greenfrvr.dev@gmail.com</string>
 
-    <string name="back">BACK</string>
-    <string name="next">NEXT</string>
 </resources>
