demo selection drawables

--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="section_style_colors">Colors &amp; Typefaces</string>
     <string name="section_style_spans">Spannables &amp; Backgrounds</string>
     <string name="section_style_drawables">Drawables</string>
+    <string name="section_style_selection_drawables">Selection drawables</string>
 
     <string name="contact">Contact greenfrvr.dev@gmail.com for any ideas or suggestions</string>
     <string name="sources">All sources available on GitHub</string>
